--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
+    "@mui/x-date-pickers": "^5.0.7",
     "@tanstack/react-query": "^4.14.5",
     "@tanstack/react-query-devtools": "^4.14.5",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "axios": "^1.1.3",
+    "dayjs": "^1.11.6",
+    "dot-prop": "^5.3.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "formik": "^2.2.9",
