--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,6 @@ phases:
   build:
     commands:
       - npm run build
-      - sam deploy --no-fail-on-empty-changeset
       # Static resources ideally served from CloudFront
       - cp -r public/. .next/standalone/public
       - cp -r .next/static/. .next/standalone/.next/static
@@ -18,6 +17,7 @@ phases:
       - mkdir dist
       - cp -r .next/standalone/. dist
       - cp run.sh dist
+      - sam package --template-file template.yaml --s3-bucket ${SAM_BUCKET} --output-template-file packaged-template.yml
 cache:
   paths:
     - .next/cache/**/*
