--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
+    "package": "npx --package @sladg/nextjs-lambda cli pack",
     "start": "next start",
     "lint": "next lint"
   },
@@ -14,7 +15,6 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
     "@mui/x-date-pickers": "^5.0.7",
-    "@sladg/imaginex-lambda": "^0.7.0",
     "@tanstack/react-query": "^4.14.5",
     "@tanstack/react-query-devtools": "^4.14.5",
     "axios": "^1.1.3",
@@ -30,6 +30,8 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@sladg/imaginex-lambda": "^0.7.0",
+    "@sladg/nextjs-lambda": "^7.0.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
