--- a/pipeline/buildspec_01_build.yml
+++ b/pipeline/buildspec_01_build.yml
@@ -10,13 +10,7 @@ phases:
   build:
     commands:
       - npm run build
-      # Static resources ideally served from CloudFront
-      - cp -r public/. .next/standalone/public
-      - cp -r .next/static/. .next/standalone/.next/static
-      # Copy artifacts for deployment
-      - mkdir dist
-      - cp -r .next/standalone/. dist
-      - cp run.sh dist
+      - npm run package
       - sam package --template-file template.yml --s3-bucket ${SAM_BUCKET} --output-template-file packaged-template.yml
 cache:
   paths:
